--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <title>Misadhi Coffee</title>
+    <meta name="description" content="At Misadhi, we empower farmers to foster collaborative thinking to further drive
+     excellent results. By providing the proper resources to our Member Farmers, we help their farms to grow and increase 
+    annual cherry production.">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
